# stitchingfaster

./: CMakeLists.txt  config.cfg  main.cc  test.py
feature/: feature.cc
stitch/: imageref.hh  stitcher.cc  stitcher.hh  stitcher_image.cc
